--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,10 @@ concurrency:
   group: pages
   cancel-in-progress: true
 
+defaults:
+  run:
+    working-directory: 'Huge Capital Dashboard/huge-capital-mgmt'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,6 +31,7 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: 'Huge Capital Dashboard/huge-capital-mgmt/package-lock.json'
 
       - name: Install dependencies
         run: npm ci
@@ -43,7 +48,7 @@ jobs:
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: Huge Capital Dashboard/huge-capital-mgmt/dist
 
   deploy:
     needs: build
